infra/istio/sts-headless-svc/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: nginx-sts
  name: nginx-sts
spec:
  serviceName: nginx-headless-svc
  replicas: 2
  selector:
    matchLabels:
      app: nginx-sts
  template:
    metadata:
      labels:
        app: nginx-sts
    spec:
      containers:
      - image: nginx
        name: nginx-sts
