infra/istio/sts-headless-svc/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-headless-svc
  name: nginx-headless-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-sts
  type: ClusterIP
  clusterIP: None
